# SCU

./: .gitignore  README.md  ankit.txt  requirements.txt  test.ipynb
.github/workflows/: python-publish.yml
scud/: README.md  __init__.py  pyproject.toml  scup.py
scud/tests/: arg.py
scup/: README.md  pyproject.toml
scup/scup/: mss.py
