[tool.poetry]
name = "scup"
version = "0.4.4"
description = "SCUP as in SQL Covertor Utility Program"
authors = ["Ankit K <ankit48365@gmail.com>","Akansha K <akanshakaushik0995@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# (OPTIONAL) tells pypi that these urls are where your project's source code and issue tracker reside
[project.urls]
"Homepage" = "https://github.com/ankit48365/SCU"
"Bug Tracker" = "https://github.com/ankit48365/SCU/issues"

